src/objects/TitleIntegrationJob__c.object
<CustomObject>
    <description>Batch job information for title loading</description>
    <fields>
        <fullName>flatFileId__c</fullName>
        <description>Id of the content item that has been entered as the flat file.</description>
        <label>Flat File Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>flatFileLoaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flat File Loaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>flatFileName__c</fullName>
        <label>Flat File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jobNotes__c</fullName>
        <label>Job Notes</label>
        <length>10768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>landGridTract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>LandGridTract related to job</description>
        <inlineHelpText>LandGridTract related to job</inlineHelpText>
        <label>LandGridTract</label>
        <referenceTo>LandGridTract__c</referenceTo>
        <relationshipLabel>Title Integration Jobs</relationshipLabel>
        <relationshipName>titleIntegrationJobs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>quarterCallLock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field for determining if Quarter Call Mapping can be updated.</description>
        <label>Quarter Call Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>runSheetId__c</fullName>
        <description>Id of the content item that has been entered as the run sheet.</description>
        <label>Run Sheet Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>runSheetLoaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field for tracking if a run sheet has been loaded for this Title Processing Job.</description>
        <label>Run Sheet Loaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>runSheetName__c</fullName>
        <label>Run Sheet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>Current status of the Title Processing Job.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>titleSourceOwner__c</fullName>
        <formula>titleWorkJob__r.srpOwner__r.FirstName + &apos; &apos; + titleWorkJob__r.srpOwner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Source Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>titleSourceType__c</fullName>
        <formula>TEXT(titleWorkJob__r.type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>titleWorkJob__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Title Work Job</label>
        <referenceTo>TitleWorkJob__c</referenceTo>
        <relationshipLabel>Title Integration Jobs</relationshipLabel>
        <relationshipName>titleIntegrationJobs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Title Integration Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>landGridTract__c</columns>
        <columns>status__c</columns>
        <columns>jobNotes__c</columns>
        <columns>titleWorkJob__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CRM_Integration_TitleIntegrationJob</fullName>
        <filterScope>Queue</filterScope>
        <label>CRM Integration</label>
        <queue>CRM_Integration</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TIJ-{0000000000}</displayFormat>
        <label>Title Integration Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Title Integration Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>